--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,15 @@
     "prefer-stable": true,
     "require": {
         "php": "~8.0.0 || ~8.1.0 || ~8.2.0 || ~8.3.0",
-        "diablomedia/zendframework1-exception": "^1.1.1",
-        "diablomedia/zendframework1-config": "^2.0.5",
-        "diablomedia/zendframework1-loader": "^1.0.5",
-        "diablomedia/zendframework1-json": "^1.0.7",
-        "diablomedia/zendframework1-cache": "^1.0.6",
-        "diablomedia/zendframework1-controller": "^1.0.6",
-        "diablomedia/zendframework1-db": "^1.0.5",
-        "diablomedia/zendframework1-filter": "^1.0.6",
-        "diablomedia/zendframework1-view": "^1.0.5"
+        "fragotesac/zf1-exception": "^1.1.1",
+        "fragotesac/zf1-config": "^2.0.5",
+        "fragotesac/zf1-loader": "^1.0.5",
+        "fragotesac/zf1-json": "^1.0.7",
+        "fragotesac/zf1-cache": "^1.0.6",
+        "fragotesac/zf1-controller": "^1.0.6",
+        "fragotesac/zf1-db": "^1.0.5",
+        "fragotesac/zf1-filter": "^1.0.6",
+        "fragotesac/zf1-view": "^1.0.5"
     },
     "autoload": {
         "psr-0": {
